--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     }
   ],
   "require": {
-    "brightnucleus/exceptions": "^0.2.5",
+    "brightnucleus/exceptions": ">=0.2.5",
     "brightnucleus/config": ">=0.4.3",
     "brightnucleus/contracts": ">=0.1.1",
     "brightnucleus/localization": ">=0.1.0",
-    "doctrine/collections": "^1.3"
+    "doctrine/collections": ">=1.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~5",
