--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,38 @@
     "brightnucleus/exceptions": ">=0.2.5",
     "brightnucleus/config": ">=0.4.3",
     "brightnucleus/contracts": ">=0.1.1",
-    "brightnucleus/localization": ">=0.1.0",
+    "brightnucleus/localization": ">=0.2.0",
     "doctrine/collections": ">=1.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5",
-    "brain/monkey": "^1"
+    "malukenho/docheader": "^1",
+    "mikey179/vfsstream": "^1.6",
+    "yoast/phpunit-polyfills": "^3",
+    "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5 || ^10",
+    "squizlabs/php_codesniffer": "^3",
+    "php-parallel-lint/php-parallel-lint": "^1.4",
+    "brain/monkey": "^2"
   },
   "autoload": {
     "psr-4": {
       "BrightNucleus\\CustomContent\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "BrightNucleus\\CustomContent\\Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "check": [
+      "@cs-check",
+      "@test"
+    ],
+    "upload-coverage": "vendor/bin/coveralls -v --coverage_clover clover.xml",
+    "cs-check": "vendor/bin/phpcs -ps --colors",
+    "cs-fix": "vendor/bin/phpcbf -ps --colors",
+    "test": "vendor/bin/phpunit --colors",
+    "test-coverage": "vendor/bin/phpunit --colors --coverage-clover clover.xml",
+    "license-check": "vendor/bin/docheader --ansi check src/"
   }
 }
